[package]
name = "rget"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
async-compression = { version = "0.4", default-features = false, features = ["tokio", "gzip", "xz", "bzip2", "zstd"] }
tokio-tar = "0.3"
async_zip = { version = "0.0.16", features = ["deflate"] }
tokio-util = { version = "0.7", features = ["io", "compat"] }
sevenz-rust = { version = "0.6", default-features = false, features = ["rand", "bzip2"] }
indicatif = { version = "0.17", features = ["tokio"] }

[profile.release]
strip         = "symbols"  # 剥离调试符号表，不影响运行
debug         = false      # 不内嵌调试信息
lto           = "thin"     # 跨 crate 裁掉未调用的代码，thin 构建速度可接受
codegen-units = 1          # 单编译单元，允许更完整的内联分析
